# rust-runas

./: Cargo.toml  Makefile  README.md  build.rs  index.html  runas-darwin.c  search-index.js
.github/workflows/: tests.yml
examples/: cmd.rs  demo.rs  windemo.rs
runas/: index.html  sidebar-items.js  struct.Command.html
src/: impl_darwin.rs  impl_unix.rs  impl_windows.rs  lib.rs
src/runas/src/: impl_darwin.rs.html  impl_unix.rs.html  lib.rs.html
