[package]
name = "runas"
version = "0.2.1"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
keywords = ["runas", "sudo", "elevate", "elevated"]
description = "Run a command as root (sudo)"
homepage = "https://github.com/mitsuhiko/rust-runas"
documentation = "http://mitsuhiko.github.io/rust-runas/"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"
rust-version = "1.48"

[dependencies]
which = "4.3.0"

[build-dependencies]
cc = "1.0.50"
