[package]
name = "runas"
version = "1.2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
keywords = ["runas", "sudo", "elevate", "elevated"]
description = "Run a command as root (sudo)"
homepage = "https://github.com/mitsuhiko/rust-runas"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.56"

[dependencies]
which = "4.3.0"

[target."cfg(target_os=\"macos\")".dependencies]
security-framework-sys = "2.9.0"
libc = "0.2.144"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
